# sheriff-generator

./: README.md  pyproject.toml  sheriff.py  urbandictionary_api.py
