[tool.poetry]
name = "sheriff-generator"
version = "0.1.0"
description = ""
authors = ["Jay H <mobeets@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
emoji = "^1.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
